--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -25,17 +25,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: teaxyz/pantry.core
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.deno
-            ~/.cache/deno
-          key: ${{ runner.os }}-deno-get-platform-${{ hashFiles('deno.jsonc')}}
-      - uses: teaxyz/setup@v0
-      - run: scripts/get-platform.ts
+      - uses: ./.github/actions/get-platform
         id: platform
-        env:
-          PLATFORM: ${{ inputs.platform }}
+        with:
+          platform: ${{ inputs.platform }}
 
   bottle:
     needs: [get-platform]
@@ -45,19 +38,19 @@ jobs:
       built: ${{ env.built }}
       pr: ${{ env.PR }}
     steps:
-      - uses: teaxyz/setup@v0
+      - uses: actions/checkout@v3
+        with:
+          path: pantry
+          repository: teaxyz/pantry.core
+      - uses: ./pantry/.github/actions/cache-brewkit
         id: tea
         with:
+          cache-prefix: bottle
           srcroot: null
           prefix: ${{ github.workspace }}
 
-      - uses: actions/cache@v3
-        with:
-          path: ${{ needs.get-platform.outputs.cache-set }}
-          key: ${{ runner.os }}-deno-bottle-${{ hashFiles('tea.xyz/var/pantry/deno.jsonc')}}
-
       - name: configure scripts PATH
-        run: echo "$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
+        run: echo "${{ steps.tea.outputs.prefix }}/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
 
       - uses: actions/download-artifact@v3
         if: ${{ inputs.new-version }}
@@ -138,21 +131,19 @@ jobs:
     needs: [bottle]
     runs-on: ubuntu-latest
     steps:
-      - uses: teaxyz/setup@v0
+      - uses: actions/checkout@v3
+        with:
+          path: pantry
+          repository: teaxyz/pantry.core
+      - uses: ./pantry/.github/actions/cache-brewkit
         id: tea
         with:
+          cache-prefix: upload
           srcroot: null
           prefix: ${{ github.workspace }}
 
       - name: configure scripts PATH
         run: echo "${{ steps.tea.outputs.prefix }}/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
-
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.deno
-            ~/.cache/deno
-          key: ${{ runner.os }}-deno-bottle-${{ hashFiles('tea.xyz/var/pantry/deno.jsonc')}}
 
       - uses: actions/download-artifact@v3
         with:
