--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,18 +27,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: teaxyz/pantry.core
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.deno
-            ~/.cache/deno
-          key: ${{ runner.os }}-deno-get-platform-${{ hashFiles('deno.jsonc')}}
-      - uses: teaxyz/setup@v0
-      - run: scripts/get-platform.ts ${{ inputs.projects }}
+      - uses: ./.github/actions/get-platform
         id: platform
-        env:
-          PLATFORM: ${{ inputs.platform }}
-          TEA_PANTRY_PATH: ${{ github.workspace }}
+        with:
+          platform: ${{ inputs.platform }}
 
   build:
     runs-on: ${{ fromJson(needs.get-platform.outputs.build-os) }}
@@ -46,14 +38,14 @@ jobs:
     needs: [get-platform]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v3
         with:
-          path: ${{ needs.get-platform.outputs.cache-set }}
-          key: ${{ runner.os }}-deno-build-${{ hashFiles('deno.jsonc')}}
-
-      - uses: teaxyz/setup@v0
+          path: pantry
+          repository: teaxyz/pantry.core
+      - uses: ./pantry/.github/actions/cache-brewkit
         id: tea
         with:
+          cache-prefix: build
           srcroot: null
           prefix: /opt
 
@@ -109,13 +101,14 @@ jobs:
     container: ${{ matrix.platform.container }}
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v3
         with:
-          path: ${{ needs.get-platform.outputs.cache-set }}
-          key: ${{ runner.os }}-deno-test-${{ hashFiles('deno.jsonc')}}
+          path: pantry
+          repository: teaxyz/pantry.core
 
-      - uses: teaxyz/setup@v0
+      - uses: ./pantry/.github/actions/cache-brewkit
+        with:
+          cache-prefix: test
 
       - uses: actions/download-artifact@v3
         with:
@@ -160,13 +153,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v3
         with:
-          path: |
-            ~/.deno
-            ~/.cache/deno
-          key: ${{ runner.os }}-deno-stage-${{ hashFiles('deno.jsonc')}}
-      - uses: teaxyz/setup@v0
+          path: pantry
+          repository: teaxyz/pantry.core
+      - uses: ./pantry/.github/actions/cache-brewkit
+        with:
+          cache-prefix: stage
 
       - name: configure scripts PATH
         run: echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
