--- a/projects/rubygems.org/package.yml
+++ b/projects/rubygems.org/package.yml
@@ -26,11 +26,14 @@ test:
   dependencies:
     tea.xyz/gx/cc: c99
     tea.xyz/gx/make: '*'
+  env:
+    HOME: $PWD
   script: |
     gem install awesome_print
     ruby -e 'require "rubygems"' -e 'require "awesome_print"' -e'ap $LOAD_PATH'
-    gem install hexapdf --bindir=.
-    ./hexapdf version
+    #TODO test -d ~/.gem/{{deps.ruby.version.major}}.{{deps.ruby.version.minor}}.0/gems/hexapdf-0.28.0
+    gem install hexapdf
+    ~/.local/bin/hexapdf version
 
 provides:
   - bin/bundle
