--- a/projects/ruby-lang.org/package.yml
+++ b/projects/ruby-lang.org/package.yml
@@ -64,11 +64,12 @@ test:
     tea.xyz/gx/make: '*'
   script: |
     ruby -e 'puts "Hello World!"'
-    gem install hexapdf -v 0.28.0 --bindir=.
+    gem install hexapdf -v 0.28.0 --bindir=. --no-user-install
     ./hexapdf version
     test -d "{{tea.prefix}}"/ruby-lang.org/gems/{{version.major}}.{{version.minor}}.0/gems/hexapdf-0.28.0
-    gem install bundle --user-install --bindir=.
-    test -d "$HOME"/.gem/{{version.major}}.{{version.minor}}.0/hexapdf-0.28.0
+    gem install bundle
+    test -d ~/.gem/{{version.major}}.{{version.minor}}.0/hexapdf-0.28.0
+    test -f ~/.local/bun/bundle
 
 provides:
   - bin/erb
