--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,7 @@ jobs:
       test-matrix: ${{ steps.platform.outputs.test-matrix }}
       cache-set: ${{ steps.platform.outputs.cache-set }}
     steps:
-      - uses: actions/checkout@v3
-        with:
-          repository: teaxyz/pantry.core
-      - uses: ./.github/actions/get-platform
+      - uses: teaxyz/pantry.core/.github/actions/get-platform@main
         id: platform
         with:
           platform: ${{ inputs.platform }}
@@ -38,11 +35,7 @@ jobs:
     needs: [get-platform]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
         id: tea
         with:
           cache-prefix: build
@@ -58,7 +51,7 @@ jobs:
           echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
           echo "TEA_PANTRY_PATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
-      - run: tea +tea.xyz/brewkit build ${{ inputs.projects }}
+      - run: pkg build ${{ inputs.projects }}
         id: build
         env:
           GITHUB_TOKEN: ${{ github.token }}
@@ -101,12 +94,7 @@ jobs:
     container: ${{ matrix.platform.container }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
-
-      - uses: ./pantry/.github/actions/cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
         with:
           cache-prefix: test
 
@@ -117,7 +105,7 @@ jobs:
       - name: extract bottles
         run: tar xzf artifacts.tgz -C $TEA_PREFIX
 
-      - run: tea +tea.xyz/brewkit test ${{ inputs.projects }}
+      - run: pkg test ${{ inputs.projects }}
         env:
           TEA_PANTRY_PATH: ${{ github.workspace }}
           GITHUB_TOKEN: ${{github.token}}
@@ -153,11 +141,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
+
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
         with:
           cache-prefix: stage
 
