--- a/.github/actions/get-platform/action.yml
+++ b/.github/actions/get-platform/action.yml
@@ -1,11 +1,12 @@
-name: Get Platform
-description: Dunno, ask Jacob
+name: tea/pantry/get-platform
+description: Outputs the platform spec we need for builds
 
 inputs:
   platform:
     description: >
       The platform+arch to get specs for
     required: true
+
 outputs:
   os:
     description: the OS for general tasks
@@ -23,9 +24,13 @@ outputs:
 runs:
   using: composite
   steps:
-    - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+    - uses: teaxyz/pantry.core/.github/actions/cache@cache-brewkit
 
-    - run: ${{github.action_path}}/../../../scripts/get-platform.ts
+    - uses: teaxyz/setup@v0
+      with:
+        srcroot: null
+
+    - run: ${{github.action_path}}/get-platform.ts
       shell: sh
       id: platform
       env:
