--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,6 @@ jobs:
     needs: [get-platform, build]
     runs-on: ${{ matrix.platform.os }}
     strategy:
-      fail-fast: false
       matrix:
         platform: ${{ fromJson(needs.get-platform.outputs.test-matrix) }}
     outputs:
@@ -99,7 +98,7 @@ jobs:
 
       - run: pkg test ${{ inputs.projects }}
         env:
-          GITHUB_TOKEN: ${{github.token}}
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: '[post]'
         run:
@@ -131,22 +130,13 @@ jobs:
     if: startsWith(github.ref, 'refs/pull/') && startsWith(github.repository, 'teaxyz/pantry.') && needs.test.outputs.HAS_SECRETS == 'true'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          repo: teaxyz/pantry.core
-
-      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
-
       - uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.platform }}
 
-      - run: scripts/cache-artifacts.ts
-          ${{github.repository}}
-          ${{github.ref}}
-          ${{inputs.platform}}
-          artifacts.tgz
-        env:
+      - uses: teaxyz/pantry.core/.github/actions/stage-build-artifacts@cache-brewkit
+        with:
+          platform: ${{ inputs.platform }}
           AWS_S3_CACHE: ${{ secrets.AWS_S3_CACHE }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
