--- a/.github/actions/bottle/action.yml
+++ b/.github/actions/bottle/action.yml
@@ -19,7 +19,7 @@ runs:
   using: composite
   steps:
     - run: ${{ github.action_path }}/bottle.ts ${{ inputs.built }}
-      id: bottle-xz
+      shell: sh
       env:
         COMPRESSION: ${{ inputs.compression }}
         GPG_KEY_ID: ${{ inputs.gpg-key-id }}
