--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,6 +137,6 @@ jobs:
       - uses: teaxyz/pantry.core/.github/actions/stage-build-artifacts@cache-brewkit
         with:
           platform: ${{ inputs.platform }}
-          AWS_S3_CACHE: ${{ secrets.AWS_S3_CACHE }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_CACHE }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
