--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -30,7 +30,7 @@ runs:
 
     - uses: teaxyz/pantry.core/.github/actions/cache@cache-brewkit
       with:
-        cache-hash: get-platform-${{ hashFiles(format('{0}/tea.xyz/brewkit/**', steps.tea.outputs.prefix)) }}
+        cache-hash: setup-${{ hashFiles(format('{0}/tea.xyz/brewkit', steps.tea.outputs.prefix)) }}
 
     - run: |
         if test -d "{{ github.workspace }}"/projects; then
