--- a/.github/actions/stage-build-artifacts/action.yml
+++ b/.github/actions/stage-build-artifacts/action.yml
@@ -26,7 +26,7 @@ runs:
       with:
         cache-hash: get-platform-${{ hashFiles('.github/actions/stage-build-artifacts/cache-artifacts.ts', './deno.jsonc') }}
 
-    - run: scripts/cache-artifacts.ts
+    - run: ${{ github.action_path }}/cache-artifacts.ts
         ${{github.repository}}
         ${{github.ref}}
         ${{inputs.platform}}
