--- a/.github/actions/stage-build-artifacts/action.yml
+++ b/.github/actions/stage-build-artifacts/action.yml
@@ -33,6 +33,6 @@ runs:
         artifacts.tgz
       shell: sh
       env:
-        AWS_S3_BUCKET: ${{ inputs.AWS_S3_BUCKET }}
+        AWS_S3_CACHE: ${{ inputs.AWS_S3_CACHE }}
         AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
