--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -35,10 +35,11 @@ jobs:
       built: ${{ env.built }}
       pr: ${{ env.PR }}
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
         id: tea
         with:
           cache-prefix: bottle
+          srcroot: null
           prefix: ${{ github.workspace }}
 
       - name: configure scripts PATH
@@ -118,10 +119,11 @@ jobs:
     needs: [bottle]
     runs-on: ubuntu-latest
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
         id: tea
         with:
           cache-prefix: upload
+          srcroot: null
           prefix: ${{ github.workspace }}
 
       - name: configure scripts PATH
