--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,15 +35,21 @@ jobs:
     needs: [get-platform]
     steps:
       - uses: actions/checkout@v3
-
-      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
         id: tea
         with:
+          cache-prefix: build
+          srcroot: null
           prefix: /opt
 
       - name: sanitize macOS runners
         if: fromJson(needs.get-platform.outputs.build-os) == 'macos-11'
         run: sudo mv /usr/local/bin/* /tmp/
+
+      - name: configure tea env
+        run: |
+          echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
+          echo "TEA_PANTRY_PATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
       - run: pkg build ${{ inputs.projects }}
         id: build
@@ -88,7 +94,9 @@ jobs:
     container: ${{ matrix.platform.container }}
     steps:
       - uses: actions/checkout@v3
-      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
+        with:
+          cache-prefix: test
 
       - uses: actions/download-artifact@v3
         with:
@@ -99,9 +107,10 @@ jobs:
 
       - run: pkg test ${{ inputs.projects }}
         env:
+          TEA_PANTRY_PATH: ${{ github.workspace }}
           GITHUB_TOKEN: ${{github.token}}
 
-      - name: '[post]'
+      - name: post
         run:
           echo "HAS_SECRETS=$HAS_SECRETS" >>$GITHUB_ENV
         env:
@@ -132,16 +141,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          repo: teaxyz/pantry.core
 
-      - uses: teaxyz/pantry.core/.github/actions/setup@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
+        with:
+          cache-prefix: stage
+
+      - name: configure scripts PATH
+        run: echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
 
       - uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.platform }}
 
-      - run: scripts/cache-artifacts.ts
+      - run: cache-artifacts.ts
           ${{github.repository}}
           ${{github.ref}}
           ${{inputs.platform}}
