--- a/.github/actions/apple-signing/action.yml
+++ b/.github/actions/apple-signing/action.yml
@@ -1,6 +1,5 @@
-name: Apple Codesigning
-description: Codesigns macOS binaries
-
+name: Apple signing
+description: signs binaries for macOS
 inputs:
   p12-file-base64:
     description: Base64 encoded p12 file
