Revert "clean and (hopefully) proper cache keying"
This reverts commit 5737d3427c9e241a1f2a0ffa156fad46c836418c.

--- a/.github/actions/bottle/action.yml
+++ b/.github/actions/bottle/action.yml
@@ -19,7 +19,7 @@ runs:
   using: composite
   steps:
     - run: ${{ github.action_path }}/bottle.ts ${{ inputs.built }}
-      shell: sh
+      id: bottle-xz
       env:
         COMPRESSION: ${{ inputs.compression }}
         GPG_KEY_ID: ${{ inputs.gpg-key-id }}
