--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,14 +5,17 @@ on:
    branches: [main]
 
 jobs:
-  ask-jacob-what-this-should-be-called:
+  cd:  # job is named poorly, all I can tell you about it is: it’s *not* CD
     runs-on: ubuntu-latest
     outputs:
       HAS_ARTIFACTS: ${{ env.HAS_ARTIFACTS }}
     steps:
       - uses: actions/checkout@v3
-
-      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
+      - uses: actions/checkout@v3
+        with:
+          path: pantry
+          repository: teaxyz/pantry.core
+      - uses: ./pantry/.github/actions/cache-brewkit
         with:
           cache-prefix: cd
 
@@ -20,7 +23,6 @@ jobs:
         env:
           WATCHER_URL: ${{ secrets.WATCHER_URL }}
           TEA_API_TOKEN: ${{ secrets.TEA_API_TOKEN }}
-
       - run: scripts/has-artifacts.ts ${{ github.repository }} ${{ github.sha }} >>$GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{github.token}}
