Revert "hash cleanly"
This reverts commit 6410f4203a7ad5464d9b1c184413a22daa8e05c2.

--- a/.github/actions/get-platform/action.yml
+++ b/.github/actions/get-platform/action.yml
@@ -30,7 +30,7 @@ runs:
 
     - uses: teaxyz/pantry.core/.github/actions/cache@cache-brewkit
       with:
-        cache-hash: get-platform-${{ hashFiles('.github/actions/get-platform/get-platform.ts', './deno.jsonc') }}
+        cache-hash: get-platform-${{ hashFiles(format('{0}/get-platform.ts', github.action_path), 'deno.jsonc') }}
 
     - run: ${{github.action_path}}/get-platform.ts
       shell: sh
