--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -22,7 +22,7 @@ jobs:
       os: ${{ steps.platform.outputs.os }}
       cache-set: ${{ steps.platform.outputs.cache-set }}
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/get-platform@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/get-platform@main
         id: platform
         with:
           platform: ${{ inputs.platform }}
@@ -35,7 +35,7 @@ jobs:
       built: ${{ env.built }}
       pr: ${{ env.PR }}
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
         id: tea
         with:
           cache-prefix: bottle
@@ -65,7 +65,7 @@ jobs:
             echo "$file=$(cat $file)" >>$GITHUB_ENV
           done
 
-      - uses: teaxyz/pantry.core/.github/actions/apple-signing@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/apple-signing@main
         if: startsWith(inputs.platform, 'darwin+')
         with:
             p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_P12 }}
@@ -119,7 +119,7 @@ jobs:
     needs: [bottle]
     runs-on: ubuntu-latest
     steps:
-      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@cache-brewkit
+      - uses: teaxyz/pantry.core/.github/actions/setup-brewkit@main
         id: tea
         with:
           cache-prefix: upload
