Revert "filter out repetitive actions"
This reverts commit 1494910eb0c2f21a5dd3be91a7335506fee3ff2f.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,14 +11,13 @@ jobs:
       HAS_ARTIFACTS: ${{ env.HAS_ARTIFACTS }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
         with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
-        with:
-          cache-prefix: cd
-
+          path: |
+            ~/.deno
+            ~/.cache/deno
+          key: ${{ runner.os }}-deno-cd-${{ hashFiles('deno.jsonc')}}
+      - uses: teaxyz/setup@v0
       - run: scripts/map-projects-to-githubs.ts
         env:
           WATCHER_URL: ${{ secrets.WATCHER_URL }}
