--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -25,10 +25,17 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: teaxyz/pantry.core
-      - uses: ./.github/actions/get-platform
-        id: platform
+      - uses: actions/cache@v3
         with:
-          platform: ${{ inputs.platform }}
+          path: |
+            ~/.deno
+            ~/.cache/deno
+          key: ${{ runner.os }}-deno-get-platform-${{ hashFiles('deno.jsonc')}}
+      - uses: teaxyz/setup@v0
+      - run: scripts/get-platform.ts
+        id: platform
+        env:
+          PLATFORM: ${{ inputs.platform }}
 
   bottle:
     needs: [get-platform]
@@ -38,19 +45,19 @@ jobs:
       built: ${{ env.built }}
       pr: ${{ env.PR }}
     steps:
-      - uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
+      - uses: teaxyz/setup@v0
         id: tea
         with:
-          cache-prefix: bottle
           srcroot: null
           prefix: ${{ github.workspace }}
 
+      - uses: actions/cache@v3
+        with:
+          path: ${{ needs.get-platform.outputs.cache-set }}
+          key: ${{ runner.os }}-deno-bottle-${{ hashFiles('tea.xyz/var/pantry/deno.jsonc')}}
+
       - name: configure scripts PATH
-        run: echo "${{ steps.tea.outputs.prefix }}/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
+        run: echo "$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
 
       - uses: actions/download-artifact@v3
         if: ${{ inputs.new-version }}
@@ -131,19 +138,21 @@ jobs:
     needs: [bottle]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
+      - uses: teaxyz/setup@v0
         id: tea
         with:
-          cache-prefix: upload
           srcroot: null
           prefix: ${{ github.workspace }}
 
       - name: configure scripts PATH
         run: echo "${{ steps.tea.outputs.prefix }}/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
+
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.deno
+            ~/.cache/deno
+          key: ${{ runner.os }}-deno-bottle-${{ hashFiles('tea.xyz/var/pantry/deno.jsonc')}}
 
       - uses: actions/download-artifact@v3
         with:
