--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: teaxyz/pantry.core
-      - uses: ./.github/actions/get-platform
-        id: platform
+      - uses: actions/cache@v3
         with:
-          platform: ${{ inputs.platform }}
+          path: |
+            ~/.deno
+            ~/.cache/deno
+          key: ${{ runner.os }}-deno-get-platform-${{ hashFiles('deno.jsonc')}}
+      - uses: teaxyz/setup@v0
+      - run: scripts/get-platform.ts ${{ inputs.projects }}
+        id: platform
+        env:
+          PLATFORM: ${{ inputs.platform }}
+          TEA_PANTRY_PATH: ${{ github.workspace }}
 
   build:
     runs-on: ${{ fromJson(needs.get-platform.outputs.build-os) }}
@@ -38,14 +46,14 @@ jobs:
     needs: [get-platform]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
         with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
+          path: ${{ needs.get-platform.outputs.cache-set }}
+          key: ${{ runner.os }}-deno-build-${{ hashFiles('deno.jsonc')}}
+
+      - uses: teaxyz/setup@v0
         id: tea
         with:
-          cache-prefix: build
           srcroot: null
           prefix: /opt
 
@@ -101,14 +109,13 @@ jobs:
     container: ${{ matrix.platform.container }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
 
-      - uses: ./pantry/.github/actions/cache-brewkit
+      - uses: actions/cache@v3
         with:
-          cache-prefix: test
+          path: ${{ needs.get-platform.outputs.cache-set }}
+          key: ${{ runner.os }}-deno-test-${{ hashFiles('deno.jsonc')}}
+
+      - uses: teaxyz/setup@v0
 
       - uses: actions/download-artifact@v3
         with:
@@ -153,13 +160,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
         with:
-          path: pantry
-          repository: teaxyz/pantry.core
-      - uses: ./pantry/.github/actions/cache-brewkit
-        with:
-          cache-prefix: stage
+          path: |
+            ~/.deno
+            ~/.cache/deno
+          key: ${{ runner.os }}-deno-stage-${{ hashFiles('deno.jsonc')}}
+      - uses: teaxyz/setup@v0
 
       - name: configure scripts PATH
         run: echo "$PWD/scripts:$TEA_PREFIX/tea.xyz/var/pantry/scripts" >> $GITHUB_PATH
